--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,14 +40,18 @@ android {
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
 
+  compile rootProject.ext.libraries.kotlinStdLib
+
   compile rootProject.ext.libraries.supportAppCompatV7
-  compile rootProject.ext.libraries.supportDesign
+  compile 'com.android.support:design:25.3.1'
 
   compile rootProject.ext.modules.imageRecognitionVuforia
 
-  testCompile rootProject.ext.testLibraries.junit
-  androidTestCompile(rootProject.ext.testLibraries.espressoCore, {
+  debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+  releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+
+  testCompile 'junit:junit:4.12'
+  androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
