--- a/imagerecognition.vuforia/build.gradle
+++ b/imagerecognition.vuforia/build.gradle
@@ -8,7 +8,7 @@ android {
   buildToolsVersion rootProject.ext.androidBuildToolsVersion
 
   defaultConfig {
-    minSdkVersion 10 //rootProject.ext.androidMinSdkVersion
+    minSdkVersion rootProject.ext.androidMinSdkVersion
     targetSdkVersion rootProject.ext.androidTargetSdkVersion
     versionCode 1
     versionName "1.0"
@@ -33,8 +33,11 @@ android {
 }
 
 dependencies {
+  compile rootProject.ext.libraries.supportAppCompatV7
+
   compile rootProject.ext.modules.vuforiaCore
   compile rootProject.ext.modules.imageRecognition
+  compile rootProject.ext.modules.permissions
 }
 
 
