--- a/permissions/build.gradle
+++ b/permissions/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'kotlin-android'
 
 android {
   compileSdkVersion rootProject.ext.androidCompileSdkVersion
   buildToolsVersion rootProject.ext.androidBuildToolsVersion
 
   defaultConfig {
-    minSdkVersion 10 //rootProject.ext.androidMinSdkVersion
+    minSdkVersion rootProject.ext.androidMinSdkVersion
     targetSdkVersion rootProject.ext.androidTargetSdkVersion
     versionCode 1
     versionName "1.0"
@@ -17,33 +17,14 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
-
-  lintOptions {
-    quiet true
-    abortOnError false
-    ignoreWarnings true
-  }
-
-  sourceSets.main {
-    jniLibs.srcDir 'libs'
-  }
-
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_7
-    targetCompatibility JavaVersion.VERSION_1_7
-  }
 }
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile rootProject.ext.libraries.kotlinStdLib
+
   compile rootProject.ext.libraries.supportAppCompatV7
 }
-// build a jar with source files
-task sourcesJar(type: Jar) {
-  from android.sourceSets.main.java.srcDirs
-  classifier = 'sources'
-}
-
-artifacts {
-  archives sourcesJar
+repositories {
+  mavenCentral()
 }
