--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':imagerecognition.vuforia', ':vuforia.core',
+include ':app', ':imagerecognition.vuforia', ':vuforia.core', ':permissions',
     ':imagerecognition',
     ':vuforia.core'
