--- a/imagerecognition.vuforia/build.gradle
+++ b/imagerecognition.vuforia/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
@@ -10,8 +9,8 @@ android {
   defaultConfig {
     minSdkVersion rootProject.ext.androidMinSdkVersion
     targetSdkVersion rootProject.ext.androidTargetSdkVersion
-    versionCode 1
-    versionName "1.0"
+    versionCode generateAutoVersionCode()
+    versionName generateVersionName(1,0,0)
   }
   buildTypes {
     release {
