--- a/imagerecognition.vuforia/build.gradle
+++ b/imagerecognition.vuforia/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group = 'com.github.Gigigo-Android-Devs'
 
 android {
   compileSdkVersion rootProject.ext.androidCompileSdkVersion
@@ -10,7 +13,7 @@ android {
     minSdkVersion rootProject.ext.androidMinSdkVersion
     targetSdkVersion rootProject.ext.androidTargetSdkVersion
     versionCode generateAutoVersionCode()
-    versionName generateVersionName(1,0,0)
+    versionName getVersionName(rootProject.ext.versionName)
   }
   buildTypes {
     release {
