--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
     applicationId "com.gigigo.imagerecognition"
     minSdkVersion rootProject.ext.androidMinSdkVersion
     targetSdkVersion rootProject.ext.androidTargetSdkVersion
-    versionCode 1
-    versionName "1.0"
+    versionCode generateAutoVersionCode()
+    versionName getVersionName(rootProject.ext.versionName)
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
   buildTypes {
