--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     classpath 'com.android.tools.build:gradle:2.3.3'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath 'com.dicedmelon.gradle:jacoco-android:0.1.2'
+    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
   }
 }
 
@@ -20,6 +21,7 @@ allprojects {
     androidMinSdkVersion = 16
     androidTargetSdkVersion = 25
     androidCompileSdkVersion = 25
+    versionName = [major: 1, minor: 0, patch: 1]
   }
 
   repositories {
