--- a/permissions/build.gradle
+++ b/permissions/build.gradle
@@ -26,6 +26,7 @@ dependencies {
   compile rootProject.ext.libraries.kotlinStdLib
 
   compile rootProject.ext.libraries.supportAppCompatV7
+  compile rootProject.ext.libraries.supportDesign
 }
 repositories {
   mavenCentral()
