moved to kotlin & changed vuforia from activity to view

--- a/imagerecognition.vuforia/build.gradle
+++ b/imagerecognition.vuforia/build.gradle
@@ -36,6 +36,7 @@ android {
 
 dependencies {
   compile rootProject.ext.libraries.kotlinStdLib
+  compile rootProject.ext.libraries.kotlinCoroutines
 
   compile rootProject.ext.libraries.supportAppCompatV7
 
