--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,9 +4,9 @@ ext {
   version = '0.0.2'
 
   libraries = [kotlinStdLib      : "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version",
+               kotlinCoroutines  : "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.19",
                supportAppCompatV7: 'com.android.support:appcompat-v7:25.3.1',
-               supportDesign: 'com.android.support:design:25.3.1'
-  ]
+               supportDesign     : 'com.android.support:design:25.3.1']
 
   testLibraries = [junit       : 'junit:junit:4.12',
                    espressoCore: 'com.android.support.test.espresso:espresso-core:2.2.2']
