--- a/vuforia.core/build.gradle
+++ b/vuforia.core/build.gradle
@@ -39,6 +39,7 @@ android {
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   compile rootProject.ext.libraries.supportAppCompatV7
+  compile files("libs/Vuforia.jar")
 }
 // build a jar with source files
 task sourcesJar(type: Jar) {
