Fix: Funcionando, sin poder enviar el resultado de vuforia, falla desde q esté el kotlin
se han cambiado cosas que no se deberían haber cambiado, entre vuforia
impl y el vuforiaactivity, Así tb es muy complidado añadir una interface
de AR

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
     versionCode generateAutoVersionCode()
     versionName getVersionName(rootProject.ext.versionName)
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    ndk {
+      abiFilters "armeabi-v7a"
+      //, "x86" "armeabi", "mips" //asv this have anysense, libVuforia ONLY exists in Armv7abi
+    }
   }
   buildTypes {
     release {
